# SpaceTreeLib

./: .clang-format  .clang-tidy  .dockerignore  .env.example  .gitignore  .gitmodules  .tasks  0_output.txt  1_output.txt  2_output.txt  CMakeLists.txt  Dockerfile  LICENSE  Makefile.docker  README.md  cpam_0_output.txt  cpam_1_output.txt  cpam_2_output.txt  docker-compose.yml  docker-run.sh
.github/workflows/: docker-build.yml
benchmark/real_world/: BhlTree_real_world.out  LogTree_real_world.out  cgal_real_world.out  res_0_real_world.out  res_0_real_world_0.out  res_0_real_world_3.out  res_1_real_world.out  res_1_real_world_3.out  res_2_real_world.out  res_real_world.out  zdtree_real_world.out
benchmark/ss_varden/1000000000_2/: cgal_summary.out  res.out  res_0_build.out  res_0_query.out  res_0_query_0.out  res_0_query_3.out  res_0_querys.out  res_0_summary.out  res_0_summary_0.out  res_0_summary_3.out  res_1_build.out  res_1_query.out  res_1_query_3.out  res_1_querys.out  res_1_summary.out  res_1_summary_3.out  res_2_query.out  res_2_query_1.out  res_2_query_2.out  res_2_querys.out  res_2_summary_1.out  res_2_summary_2.out  res_summary.out  rtree.out  zdtree_summary.out
benchmark/ss_varden/1000000000_3/: res.out  res_0_build.out  res_0_query.out  res_0_query_0.out  res_0_query_3.out  res_0_querys.out  res_0_summary.out  res_0_summary_0.out  res_0_summary_3.out  res_1_build.out  res_1_query.out  res_1_query_3.out  res_1_querys.out  res_1_summary.out  res_1_summary_3.out  res_2_query.out  res_2_query_1.out  res_2_query_2.out  res_2_querys.out  res_2_summary_1.out  res_2_summary_2.out  res_batch_update.out  res_summary.out  zdtree_summary.out
benchmark/ss_varden/1000000000_5/: res_summary.out
benchmark/ss_varden/1000000000_9/: res_summary.out
benchmark/ss_varden/100000000_2/: BhlTree_highDim.out  LogTree_highDim.out  cgal.out  cgal_batch_update.out  cgal_highDim.out  cgal_querys.out  cgal_summary.out  res.out  res_0_build.out  res_0_query.out  res_0_querys.out  res_1_build.out  res_1_querys.out  res_2_querys.out  res_batch_update.out  res_count.out  res_highDim.out  res_quality.out  res_querys.out  res_summary.out  rtree.out  zdtree.out  zdtree.quality.out  zdtree_batch_update.out  (+2 more)
cmake/: danalysis.cmake
doc/: ARTIFACT_EVALUATION.md  DOCKER_QUICK_REFERENCE.md  MANUAL.md  QUICK_START.md  README.md
docs/: ARTIFACT_EVALUATION.md  DOCKER_QUICK_REFERENCE.md  MANUAL.md  QUICK_START.md  SIMD_SAMPLE_SORT_NOTES.md  SIMD_SAMPLE_SORT_NOTES.zh.md  TREE_ANSWER.md
example/: cpam.h  cpam_main.cpp  kd_tree.h  kd_tree_main.cpp  orth_tree.h  orth_tree_main.cpp  p_tree.h  p_tree_main.cpp  run_examples.sh
include/cpam/: augmented_map.h  augmented_ops.h
include/cpdd/: baseTree.h  base_tree.h  basic_point.h  cpdd.h  kdTreeParallel.h  kd_tree.h  oct_tree.h  orth_tree.h  quad_tree.h  r_tree.h  tree_node.h
include/pam/: utils.h
include/psi/: base_tree.h  cover_tree.h  kd_tree.h  orth_tree.h  p_tree.h  r_tree.h
include/pspt/: base_tree.h  cover_tree.h  kd_tree.h  orth_tree.h  p_tree.h  r_tree.h
include/pstp/: base_tree.h  cover_tree.h  kd_tree.h  orth_tree.h  r_tree.h
parlaylib/examples/: oct_tree.h
script/: checkCorrect.sh  compare_merge_box.sh  draw_points.py  gen_ss_varden.sh  inba_ave_max.py  kill_script.sh  linear_leaf_wrap.sh  make_graph.sh  merge_1e9.py  merge_batch_updates.py  merge_count.py  merge_highDim.py  merge_incre.py  merge_linear_wrap.py  merge_merge_box.py  merge_random_seq.py  merge_range_query.py  merge_range_querys.py  merge_real_world.py  merge_scalability.py  merge_summary.py  merge_vary.py  osm.py  osm_data.csv  random_leaf_wrap.sh  run.sh  run_batch_knn.sh  run_batch_update.sh  run_batch_updates.sh  run_build.sh  run_count.sh  run_highDim.sh  run_inba_ratio.sh  run_inba_ratio_count.sh  run_incre_delete.sh  run_incre_insert.sh  run_incre_update.sh  run_querys.sh  run_range_count_log.sh  run_range_query_log.sh  (+10 more)
script/data/: build.csv  cgal_osm_month.out  cgal_osm_year.out  count.csv  count_1.csv  count_3.csv  delete.csv  delete_2.csv  diff.csv  inba_ratio_knn_ave_max.out  inba_ratio_knn_ave_max_uniform.out  inba_ratio_knn_ave_max_varden.out  inba_ratio_knn_max.out  inba_ratio_knn_ref.out  inba_ratio_rc.out  inba_ratio_rc_max.out  incre_delete.csv  incre_insert.csv  incre_insert_3.csv  insert.csv  insert_2.csv  knn.csv  knn_1.csv  knn_3.csv  osm_month_year.out  osm_year_info.out  rquery.csv  rquery_1.csv  rquery_3.csv  scalability.csv  serial_delete_uniform.out  serial_delete_varden.out  serial_update.out  summary.csv  test_osm_month.out  test_osm_year.out  uniformSerialDelete.out  uniformSerialInsert.out  vardenSerialDelete.out  vardenSerialInsert.out
script_ae/: ae_data_generate.sh  ae_download_real_word_data.sh  ae_run_batch_updates.sh  ae_run_incre_update.sh  ae_run_incre_update_3d.sh  ae_run_range_query_with_log.sh  ae_run_real_world.sh  ae_scalability.sh  merge_batch_updates.py  merge_incre.py  merge_incre_3d.py  merge_range_query.py  merge_real_world.py  merge_scalability.py  plot_fig10_3d_summary.R  plot_fig3_answer_table.R  plot_fig4_knn.R  plot_fig5_range_query_scatter.R  plot_fig7_real_world.R  plot_fig8_batch_updates.R  plot_fig9_scalability.R  run.sh
script_ae/data/: build.csv  count_3.csv
script_ae/plots/: merged_real_world.csv  merged_summary_2.csv  merged_summary_3.csv
static_analysis/: CMakeLists.txt
tests/: baseline.cpp  baseline_ccp.cpp  baselines.cpp  boost_rtree.cpp  ccp.cpp  cgal.cpp  checkCorrectParallel.cpp  data_generate.cpp  data_op.h  data_wash.cpp  kdTree.h  kd_array_test.cpp  kd_ccp.cpp  kd_test.cpp  p_ccp.cpp  p_test.cpp  rtree.cpp  test.cpp  testFramework.h  testOctTree.cpp  test_framework.h  testers.cpp
tests/common/: IO.h  atomics.h  dataGen.h  geometry.h  geometryIO.h  get_time.h  graph.h  graphIO.h  graphUtils.h  ligraLight.h  parseCommandLine.h  parse_command_line.h  sequenceIO.h  speculative_for.h  time_loop.h  topology.h  topology_from_triangles.h
tests/test_framework/: augmentation_types.h  test_config.h  test_functions.h  test_helpers.h  tree_wrappers.h
tests/zdtree/: neighborsTime.C
(+807 files in other folders)
